feat: add findByEmail method to UserService and update JwtAuthFilter for email-based authentication