@@ -1,18 +1,22 @@
 package lk.ijse.gdse.backend.util;
 
-import jakarta.servlet.*;
-import jakarta.servlet.http.*;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lk.ijse.gdse.backend.entity.UserEntity;
 import lk.ijse.gdse.backend.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -32,16 +36,21 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         String email = null;
 
         if (token != null) {
-            email = jwtUtil.extractEmail(token);
+            try {
+                email = jwtUtil.extractEmail(token);
+            } catch (Exception e) {
+                // Token is invalid or expired, skip authentication
+            }
         }
 
         if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            UserEntity user = userService.validateLogin(email, null); // password=null to just find
+            UserEntity user = userService.findByEmail(email); // ✅ No password check
 
             if (user != null && jwtUtil.validateToken(token, email)) {
                 UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        user, null,
-                        Collections.emptyList() // or add roles if needed
+                        user.getEmail(), // principal
+                        null,
+                        List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())) // ✅ Add role authority
                 );
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authToken);
